# GameProtoGen

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ca-game-protogen-AutoDeployTrigger-47c68dc6-9a77-47d1-97c7-e9c4ee2f4956.yml  ca-game-protogen-AutoDeployTrigger-a91aae87-b670-42df-8b88-beafe315cf6e.yml
GameProtoGen/: ApiClient.cpp  Application.cpp  CMakeLists.txt  ChatPanel.cpp  EditorApp.cpp  GameProtoGen.cpp  ImGuiLayer.cpp  InspectorPanel.cpp  PhysicsSystem.cpp  Renderer2D.cpp  Scene.cpp  SceneSerializer.cpp  ViewportPanel.cpp
GameProtoGen/Headers/: Components.h  EditorApp.h  Entity.h  ImGuiLayer.h  InspectorPanel.h  Renderer2D.h  Scene.h  SceneContext.h  ViewportPanel.h
GameProtoGenApp/GameProtoGen/: ApiClient.cpp  Application.cpp  CMakeLists.txt  ChatPanel.cpp  EditorApp.cpp  ImGuiLayer.cpp  InspectorPanel.cpp  PlayerMain.cpp  SFMLWindow.cpp  Scene.cpp  SceneSerializer.cpp  ViewportPanel.cpp
GameProtoGenApp/GameProtoGen/Auth/: JwtDisplayName.h  LoopbackServer.cpp  LoopbackServer.h  OidcClient.cpp  OidcClient.h  PKCE.cpp  PKCE.h  TokenManager.h
GameProtoGenApp/GameProtoGen/Core/: Application.cpp  Application.h  Log.cpp  Log.h  SFMLWindow.cpp  SFMLWindow.h
GameProtoGenApp/GameProtoGen/ECS/: Components.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h
GameProtoGenApp/GameProtoGen/Editor/: EditorApp.cpp  EditorDockLayer.cpp  EditorDockLayer.h  EditorFonts.h  EditorLogSink.h  ExportPlayable.cpp  ExportPlayable.h  ImGuiCoreLayer.cpp  ImGuiCoreLayer.h  ImGuiLayer.cpp  ImGuiLayer.h  LauncherLayer.cpp  LauncherLayer.h
GameProtoGenApp/GameProtoGen/Editor/Panels/: ChatPanel.cpp  ChatPanel.h  InspectorPanel.cpp  InspectorPanel.h  ViewportPanel.cpp  ViewportPanel.h
GameProtoGenApp/GameProtoGen/Headers/: ApiClient.h  Application.h  ChatPanel.h  PhysicsSystem.h  SFMLWindow.h  SceneContext.h  SceneSerializer.h  ViewportPanel.h
GameProtoGenApp/GameProtoGen/Net/: ApiClient.cpp  ApiClient.h
GameProtoGenApp/GameProtoGen/Runtime/: EditorContext.h  GameRunner.cpp  GameRunner.h  PlayerMain.cpp  SceneContext.h  StdoutLogSink
GameProtoGenApp/GameProtoGen/Systems/: PhysicsSystem.cpp  PhysicsSystem.h  Renderer2D.cpp  Renderer2D.h  ScriptSystem.cpp  ScriptSystem.h  ScriptVM.cpp  ScriptVM.h
GameProtoGenApp/GameProtoGen/Tests/: test_apiclient.cpp  test_collision.cpp  test_gamerunner.cpp  test_scene_serializer.cpp  test_scriptvm.cpp
GameProtoGenApp/Internal/Brand/: appicon.rc
GameProtogenAPI/: GameProtogenAPI.sln
GameProtogenAPI/GameProtogenAPI/: Dockerfile  GameProtogenAPI.csproj  GameProtogenAPI.http  Program.cs  appsettings.Development.json
GameProtogenAPI/GameProtogenAPI.OnlineTests/: AssetGenTests.cs  DesignQATests.cs  GameProtogenAPI.OnlineTests.csproj  OpsTests.cs  PlanTests.cs  RouteTests.cs  ScriptGenTests.cs
GameProtogenAPI/GameProtogenAPI.OnlineTests/Infra/: SceneUtils.cs  ServiceFactory.cs
GameProtogenAPI/GameProtogenAPI.Tests/: ChatControllerTests.cs  GameProtogenAPI.Tests.csproj
GameProtogenAPI/GameProtogenAPI.Tests/Infra/: CustomWebApplicationFactory.cs  FakeImageService.cs  TestAuthHandler.cs
GameProtogenAPI/GameProtogenAPI/AI/AgentPlugins/: AssetGenPlugin.cs  GameDesignAdvisorPlugin.cs  PlannerPlugin.cs  RouterPlugin.cs  ScriptGenPlugin.cs  SynthesizerPlugin.cs
GameProtogenAPI/GameProtogenAPI/AI/Orchestration/: SkSceneEditOrchestrator.cs
GameProtogenAPI/GameProtogenAPI/AI/Orchestration/Contracts/: ISkSceneEditOrchestrator.cs
GameProtogenAPI/GameProtogenAPI/Controllers/: ChatController.cs
GameProtogenAPI/GameProtogenAPI/Models/: ChatModels.cs
GameProtogenAPI/GameProtogenAPI/Properties/: launchSettings.json
GameProtogenAPI/GameProtogenAPI/Services/: LLMService.cs  LLMServiceMock.cs  OpenAIImageGenService.cs
GameProtogenAPI/GameProtogenAPI/Services/Contracts/: IImageService.cs  ILLMService.cs
GameProtogenAPI/GameProtogenAPI/Validators/: OpsValidator.cs
